more outline info

--- a/test_accuracy_paper/test_accuracy_empirical.tex
+++ b/test_accuracy_paper/test_accuracy_empirical.tex
@@ -3,6 +3,8 @@
 \section{Empirical Results on Pre-trained DNNs}
 \label{sxn:emp}
 
+\nred{TOO LONG for a 10 page paper...move extra results to  Appendix}
+
 (((
 \charles{
 In this study, we only need to consider Linear and 2D Convolutional (Conv2D) layers because we will only examine series of commonly
